--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.1.1"
   },
   "devDependencies": {
     "react-scripts": "3.0.0"
