--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "firebase": "6.0.2",
+    "mapbox-gl": "^1.11.1",
     "node-sass": "4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
