--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "classnames": "^2.2.6",
     "firebase": "6.0.2",
     "mapbox-gl": "^1.11.1",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
     "reselect": "4.0.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.1.1"
+    "semantic-ui-react": "^1.1.1",
+    "stripe": "^8.88.0"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "react-scripts": "^3.4.3"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
