--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "6.0.2",
     "mapbox-gl": "^1.11.1",
     "node-sass": "^4.14.1",
+    "pure-react-carousel": "^1.27.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-image-gallery": "^1.0.8",
