--- a/package.json
+++ b/package.json
@@ -1,29 +1,55 @@
 {
-  "name": "street-collectiv-server",
-  "version": "1.0.0",
-  "engines": {
-    "node": "10.19.0",
-    "npm": "6.14.4"
-  },
-  "scripts": {
-    "client": "cd client && npm start",
-    "server": "nodemon server.js",
-    "build": "cd client && npm run build",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
-  },
+  "name": "street-collectiv",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "body-parser": "^1.19.0",
-    "compression": "1.7.4",
-    "cors": "2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "stripe": "^8.89.0"
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@stripe/stripe-js": "^1.9.0",
+    "axios": "^0.20.0",
+    "classnames": "^2.2.6",
+    "mapbox-gl": "^1.11.1",
+    "node-sass": "^4.14.1",
+    "pure-react-carousel": "^1.27.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-image-gallery": "^1.0.8",
+    "react-redux": "7.0.3",
+    "react-router-dom": "5.0.0",
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "4.0.1",
+    "redux-logger": "3.0.6",
+    "redux-persist": "5.10.0",
+    "reselect": "4.0.0",
+    "stripe": "^8.88.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "react-scripts": "^3.4.3"
+  },
+  "resolutions": {
+    "babel-jest": "24.7.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
