--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.15",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@stripe/stripe-js": "^1.9.0",
+    "aws-amplify": "^3.0.24",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "mapbox-gl": "^1.11.1",
