--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-stripe-elements": "^6.1.2",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
